--- a/index.html
+++ b/index.html
@@ -8,6 +8,98 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+  <style>
+    body {
+  background-image: url(img/fondo.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+
+}
+
+
+
+.logo{
+    width: 200px;
+    height: 200px;
+    float: left;
+    padding: 20px;
+}
+footer{
+	background-color: 	rgb(1,75,160);
+	color: black;
+	text-align: center;
+	padding: 1.2rem;
+	margin-top: 4%;
+}
+.contenedor-footer {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	margin: auto;
+	padding-bottom: 20px;
+	border-bottom: 1px solid black;
+}
+.fa {
+    padding: 20px !important;
+    font-size: 20px !important;
+    text-align: center !important;
+    text-decoration: none !important;
+    margin: 1px 1px !important;
+    border-radius: 100% !important;
+    -webkit-border-radius: 100% !important;
+    -moz-border-radius: 100% !important;
+    -ms-border-radius: 100% !important;
+    -o-border-radius: 100% !important;
+}
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+.menu {
+   
+    font-size: 20px !important;
+    text-align: center !important;
+    text-decoration: none !important;
+    margin: 22px  !important;
+   margin-top: 10px;
+   
+}
+.menu:hover{
+  /*Para cambiar el color cuanto pase el mouse*/
+  background-color: rgb(240, 30, 30);
+  transition: 0.5s;
+}
+
+/*imagenes*/
+#img{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+ 
+}
+
+  </style>
 
 <body>
 
