--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a style="color: black; font-family: Impact;" class="menu" href="file:///C:/Users/PC/Desktop/Ramontercer%20producto/especialidades.html">Especialidades</a>
               </li>
               <li class="nav-item">
-                <a style="color: black; font-family: Impact;" class="menu" href="file:///C:/Users/PC/Desktop/Ramontercer%20producto/Contactos.html">Contactos</a>
+                <a style="color: black; font-family: Impact;" class="menu" href="Contactos.html">Contactos</a>
               </li>
             </ul>
           </div>
