--- a/Contactos.html
+++ b/Contactos.html
@@ -13,7 +13,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <link rel="stylesheet" type="text/css" href="..//Ramontercer producto/CSS/estilo.css">
+        <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
 
     <div class="container">
