--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,7 @@
         <title> Unidad Ramon Barba Narajon</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-        <link rel="stylesheet" type="text/css" href="..//Ramontercer producto/estilos.css">
+        <link rel="stylesheet" type="estilos.css">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             </head>
