--- a/especialidades.html
+++ b/especialidades.html
@@ -3,11 +3,9 @@
         <title> Unidad Ramon Barba Narajon</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-        <link rel="stylesheet" type="text/css" estilos.css">
-
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-            </head>
+        <link rel="stylesheet" href="estilos.css">
+     </head>
 <body>
   <div class="container">
     <img src="IMG/logo.png" alt="" class="logo">
