--- a/especialidades.html
+++ b/especialidades.html
@@ -66,7 +66,7 @@
           <div class="col-sm-4 mb-3 mb-sm-0">
               <h5 class="fluid -title text-center">Electromecánica</h5>
               <div class="card box-shadow-1">
-                  <img src="IMG/img1.jpg" class="img-fluid" alt="200*200">
+                  <img src="https://i.ytimg.com/vi/IGQz_faq8To/hqdefault.jpg" class="img-fluid" alt="200*200">
                   <div class="card-img-overlay">
                   </div>
               </div>
@@ -74,7 +74,7 @@
           <div class="col-sm-4 mb-3 mb-sm-0">
               <h5 class="fluid-title text-center">Mecánica</h5>
               <div class="card box-shadow-1">
-                  <img src="IMG/img2.jpg" class="img-fluid" alt="...">
+                  <img src="https://d3puay5pkxu9s4.cloudfront.net/curso/581/card_imagen.jpg" class="img-fluid" alt="...">
                   <div class="card-img-overlay">
                   </div>
               </div>
