--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a style="color: black; font-family: Impact;" class="menu" aria-current="page"
-                  href="file:///C:/Users/PC/Desktop/Ramontercer%20producto/nosotros.html">Nosotros</a>
+                  href="https://ronniec45.github.io/web_R.B.N/nosotros.html">Nosotros</a>
               </li>
 
               <li class="nav-item dropdown ">
                 <a style="color: black; font-family: Impact;" class="menu" href="#" role="button"
                   data-bs-toggle="dropdown" aria-expanded="false">Oferta Academica
                   <ul class="dropdown-menu">
-                    <li><a style="color: black; font-family: Impact; " class="menu" href="file:///C:/Users/PC/Desktop/Ramontercer%20producto/especialidades.html">Matutina</a></li>
-                    <li><a style="color: black; font-family: Impact; " class="menu" href="file:///C:/Users/PC/Desktop/Ramontercer%20producto/especialidades.html">Vespertina</a></li>
+                    <li><a style="color: black; font-family: Impact; " class="menu" href="https://ronniec45.github.io/web_R.B.N/especialidades.html">Matutina</a></li>
+                    <li><a style="color: black; font-family: Impact; " class="menu" href="https://ronniec45.github.io/web_R.B.N/especialidades.html">Vespertina</a></li>
                   </ul>
                 </a>
               </li>
               <li class="nav-item">
                 <a style="color: black; font-family: Impact;" class="menu"
-                  href="file:///C:/Users/PC/Desktop/Ramontercer%20producto/docentes.html">Docentes</a>
+                  href="https://ronniec45.github.io/web_R.B.N/docentes.html">Docentes</a>
               </li>
               <li class="nav-item">
-                <a style="color: black; font-family: Impact;" class="menu" href="file:///C:/Users/PC/Desktop/Ramontercer%20producto/especialidades.html">Especialidades</a>
+                <a style="color: black; font-family: Impact;" class="menu" href="https://ronniec45.github.io/web_R.B.N/especialidades.html">Especialidades</a>
               </li>
               <li class="nav-item">
                 <a style="color: black; font-family: Impact;" class="menu" href="https://ronniec45.github.io/web_R.B.N/Contactos.html">Contactos</a>
