--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 <a style="color: black; font-family: Impact;" class="menu" href="#" role="button"
                   data-bs-toggle="dropdown" aria-expanded="false">Oferta Academica
                   <ul class="dropdown-menu">
-                    <li><a style="color: black; font-family: Impact; " class="menu" href="https://ronniec45.github.io/web_R.B.N/especialidades.html">Matutina</a></li>
+                    <li><a style="color: black; font-family: Impact; " class="menu" href="especialidades.html">Matutina</a></li>
                     <li><a style="color: black; font-family: Impact; " class="menu" href="https://ronniec45.github.io/web_R.B.N/especialidades.html">Vespertina</a></li>
                   </ul>
                 </a>
               </li>
               <li class="nav-item">
                 <a style="color: black; font-family: Impact;" class="menu"
-                  href="https://ronniec45.github.io/web_R.B.N/docentes.html">Docentes</a>
+                  href="docentes.html">Docentes</a>
               </li>
               <li class="nav-item">
                 <a style="color: black; font-family: Impact;" class="menu" href="https://ronniec45.github.io/web_R.B.N/especialidades.html">Especialidades</a>
