--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a style="color: black; font-family: Impact;" class="menu" aria-current="page"
-                  href="https://ronniec45.github.io/web_R.B.N/nosotros.html">Nosotros</a>
+                  href="nosotros.html">Nosotros</a>
               </li>
 
               <li class="nav-item dropdown ">
@@ -38,7 +38,7 @@
                   data-bs-toggle="dropdown" aria-expanded="false">Oferta Academica
                   <ul class="dropdown-menu">
                     <li><a style="color: black; font-family: Impact; " class="menu" href="especialidades.html">Matutina</a></li>
-                    <li><a style="color: black; font-family: Impact; " class="menu" href="https://ronniec45.github.io/web_R.B.N/especialidades.html">Vespertina</a></li>
+                    <li><a style="color: black; font-family: Impact; " class="menu" href="especialidades.html">Vespertina</a></li>
                   </ul>
                 </a>
               </li>
@@ -47,10 +47,10 @@
                   href="docentes.html">Docentes</a>
               </li>
               <li class="nav-item">
-                <a style="color: black; font-family: Impact;" class="menu" href="https://ronniec45.github.io/web_R.B.N/especialidades.html">Especialidades</a>
+                <a style="color: black; font-family: Impact;" class="menu" href="especialidades.html">Especialidades</a>
               </li>
               <li class="nav-item">
-                <a style="color: black; font-family: Impact;" class="menu" href="https://ronniec45.github.io/web_R.B.N/Contactos.html">Contactos</a>
+                <a style="color: black; font-family: Impact;" class="menu" href="Contactos.html">Contactos</a>
               </li>
             </ul>
           </div>
