--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                   href="docentes.html">Docentes</a>
               </li>
               <li class="nav-item">
-                <a style="color: black; font-family: Impact;" class="menu" href="especialidades.html">Especialidades</a>
+                <a style="color: black; font-family: Impact;" class="menu" href="https://ronniec45.github.io/web_R.B.N/especialidades.html">Especialidades</a>
               </li>
               <li class="nav-item">
-                <a style="color: black; font-family: Impact;" class="menu" href="Contactos.html">Contactos</a>
+                <a style="color: black; font-family: Impact;" class="menu" href="https://ronniec45.github.io/web_R.B.N/Contactos.html">Contactos</a>
               </li>
             </ul>
           </div>
