--- a/especialidades.html
+++ b/especialidades.html
@@ -103,7 +103,7 @@
           <div class="col-sm-4 mb-3 mb-sm-0">
               <h5 class="flued-title text-center">Mecatronica</h5>
               <div class="card box-shadow-1">
-                  <img src="img/img5.jpg" class="img-fluid" alt="">
+                  <img src="https://287524.fs1.hubspotusercontent-na1.net/hubfs/287524/Imported_Blog_Media/habilidades-que-todo-ingeniero-mecatronico-debe-tener-1-compressor-Dec-17-2022-08-24-45-7060-PM.jpg" class="img-fluid" alt="">
                   <div class="card-img-overlay">
                       
                   </div>
